chore: set required field in schemas
